# SOMA

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  fix_and_run.bat  fix_and_run.ps1  package-lock.json  package.json  setup.sh  start-dev.sh  vite.config.js
ConceptDocs/: CONCEPT_OWNERSHIP.md  SOMA-Colony Partnership  executive-summary.md  whitepaper.md
SOMA Colleague (Provider Platform)/: README.md
SOMA Colleague (Provider Platform)/src/: App.js
SOMA Companion (Individual)/: README.md
aldr-health-companion/: README.md  package-lock.json  package.json
aldr-health-companion/public/: index.html
aldr-health-companion/src/: App.js  index.css  index.js
aldr-vaults-mvp/: README.md  package-lock.json  package.json  tailwind.config.js
aldr-vaults-mvp/docs/: PROJECT_STRUCTURE.md
aldr-vaults-mvp/public/: index.html  manifest.json
aldr-vaults-mvp/src/: App.css  App.js  index.css
autonomi-bridge/: index.js  package-lock.json  package.json
autonomi-service/: Cargo.toml
autonomi-service/src/: main.rs
backend/: Folder Structure 9pm.txt  Structure 9pm.txt  package-lock.json  package.json  server.js  server.js.bak
client/: package-lock.json  package.json
colleague/: package-lock.json  package.json
docs/: executive-summary.md  technical-architecture.md  whitepaper.md
frontend/: DEVELOPER.md  package-lock.json  package.json  tailwind.config.js
local-colonylib-fix/: .cargo_vcs_info.json  Cargo.toml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+101 files in other folders)
