[package]
name = "aldr-autonomi-mvp"
version = "0.1.0"
description = "Aldr Autonomi MVP - Secure identity vault on the Autonomi network, built on Colony infrastructure"
authors = ["James Stafford", "Chuck McClish", "Maxx Rodriguez"]
edition = "2021"
homepage = "https://github.com/stafford-j/SOMA"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
colonylib = { path = "../local-colonylib-fix" }
autonomi = "0.4.6"
tracing = "0.1.41"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3.18"
thiserror = "2.0.12"
multiaddr = "0.18"
dotenv = "0.15"

[profile.dev]
opt-level = 0
incremental = true

[dev-dependencies]
tokio-test = "0.4"
ruint = "1.12.3"
tracing-subscriber = "0.3.18"
